with-deployment/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  labels:
    name: redis-deploy
    app: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
      app: demo-voting-app
  template:
    metadata:
      name: redis-pod    
      labels:
        name: redis-pod
        app: demo-voting-app  
    spec:
      containers:
      - name: redis
        image: redis
        resources:
<<<<<<< HEAD
=======
          requests:
            memory: "64Mi"
            cpu: "250m"
>>>>>>> fdf72f7 (changes to with-deployment)
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 6379
