with-deployment/result-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app-deploy
  labels:
    name: result-app-deploy
    app: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: result-app-pod
      app: demo-voting-app  
  template:
    metadata:
      name: result-app-pod    
      labels:
        name: result-app-pod
        app: demo-voting-app  
    spec:
      containers:
      - name: result-app
        image: kodekloud/examplevotingapp_result:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
