with-deployment/voting-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
namespace: voting-app
metadata:
  name: voting-app-deploy
  labels:
    name: voting-app-deploy
    app: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: voting-app-pod
      app: demo-voting-app  
  template:
    metadata:
      name: voting-app-pod    
      labels:
        name: voting-app-pod
        app: demo-voting-app  
    spec:
      containers:
      - name: voting-app
        image: dockersamples/examplevotingapp_vote
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
