with-deployment/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app-deploy
  labels:
    name: worker-app-deploy
    app: demo-voting-app
spec:
  replicas: 1
  selector:
    matchLabels:
        name: worker-app-pod
        app: demo-voting-app
  template:
    metadata:
      name: worker-app-pod
      labels:
        name: worker-app-pod
        app: demo-voting-app
    spec:
      containers:
        - name: worker-app
<<<<<<< HEAD
          image: kodekloud/examplevotingapp_worker:v1
          resources:
=======
          image: dockersamples/examplevotingapp_worker
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
>>>>>>> fdf72f7 (changes to with-deployment)
            limits:
              memory: "128Mi"
              cpu: "500m"
