with-deployment/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: voting-app
  labels:
    name: redis-service
    app: demo-voting-app
spec:
  selector:
    name: redis-pod
    app: demo-voting-app  
  ports:
  - port: 6379
    targetPort: 6379
