with-deployment/result-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: voting-app
  labels:
    name: result-app-pod
    app: demo-voting-app
spec:
  type: NodePort
  selector:
    name: result-app-pod
    app: demo-voting-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30002
