with-deployment/voting-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-service
  labels:
    name: voting-service
    app: demo-voting-app
spec:
  type: NodePort
  selector:
    name: voting-app-pod
    app: demo-voting-app
  ports:
<<<<<<< HEAD
  - port: 80
    targetPort: 80
    nodePort: 30004
=======
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30004
>>>>>>> fdf72f7 (changes to with-deployment)
